Bug 91484 - Macro editor menus render all black
Summary: Macro editor menus render all black
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta1
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2
Keywords: bibisected, regression
: 91487 91506 91659 (view as bug list)
Depends on:
Blocks: RenderContext
  Show dependency treegraph
 
Reported: 2015-05-22 15:50 UTC by Matthew Francis
Modified: 2016-10-25 19:19 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2015-05-22 15:50:12 UTC
All the menus in the macro editor render all black

Regression since
2015-05-15: source-hash-9c08a06f5d399a7cd11849a377a82663ef6a528e
Comment 1 Matthew Francis 2015-05-22 15:53:42 UTC
(setting to NEW - confirmed by beluga on IRC)

The 1:1 bibisect build for 5.0 master hasn't quite caught up yet, but I'm guessing this is most likely from the RenderContext work based on the commits in the coarse-bibisect range

Adding Cc: to quikee@gmail.com; Any thoughts on this one? Thanks
Comment 2 pierre-yves samyn 2015-05-22 16:22:24 UTC
Hi

I confirm on windows 7/64 & Version: 5.0.0.0.beta1
Build ID: 0a16c3dda4150008d9be6f24cbd15ac198d116d3
Locale: fr-FR (fr_FR)

I add that when IDE is open, menus of other windows are also impacted (writer, calc ...)

Regards
Pierre-Yves
Comment 3 Michael Meeks 2015-05-28 11:44:30 UTC
*** Bug 91645 has been marked as a duplicate of this bug. ***
Comment 4 Michael Meeks 2015-05-28 11:45:19 UTC
Chasing; looks like the text color is not initialized correctly from way back - which gets provoked by the RenderContext. Thanks for filing !
Comment 5 Michael Meeks 2015-05-28 13:27:11 UTC
Hmm; some deep badness happens to the splitwin here too - docking and un-docking things in basic is also busted.
Comment 6 Michael Meeks 2015-05-29 09:20:18 UTC
*** Bug 91487 has been marked as a duplicate of this bug. ***
Comment 7 Michael Meeks 2015-05-29 09:22:26 UTC
*** Bug 91659 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2015-05-29 09:26:15 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0af0211b0f81f91727c81df909c0b41cedc4b088

tdf#91484 fix macro editor - Invalidate in paint

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Terrence Enger 2015-05-29 11:43:20 UTC
*** Bug 91506 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2015-05-29 18:19:05 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9b1860465ee6d5d2ab91d013ee854ff8874fe9eb&h=libreoffice-5-0

tdf#91484 fix macro editor - Invalidate in paint

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Michael Meeks 2015-06-01 15:06:34 UTC
Tomaz suggested this is fixed in a call earlier; so closing it for him.
Comment 12 Robinson Tryon (qubit) 2015-12-17 09:12:01 UTC Comment hidden (obsolete)