tdf#91484 fix macro editor - Invalidate in paint

Change-Id: I787da9a665e54caea229def185076b29c00fd11e
Signed-off-by: Jan Holesovsky <kendy@collabora.com>